; ModuleID = '/home/carl/AnghaBench/git/extr_entry.c_fstat_output.c'
source_filename = "/home/carl/AnghaBench/git/extr_entry.c_fstat_output.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.checkout = type { i32, i64 }
%struct.stat = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, %struct.checkout*, %struct.stat*)* @fstat_output to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @fstat_output(i32 %0, %struct.checkout* %1, %struct.stat* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca %struct.checkout*, align 8
  %7 = alloca %struct.stat*, align 8
  store i32 %0, i32* %5, align 4
  store %struct.checkout* %1, %struct.checkout** %6, align 8
  store %struct.stat* %2, %struct.stat** %7, align 8
  %8 = call i64 (...) @fstat_is_reliable()
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %24

10:                                               ; preds = %3
  %11 = load %struct.checkout*, %struct.checkout** %6, align 8
  %12 = getelementptr inbounds %struct.checkout, %struct.checkout* %11, i32 0, i32 1
  %13 = load i64, i64* %12, align 8
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %24

15:                                               ; preds = %10
  %16 = load %struct.checkout*, %struct.checkout** %6, align 8
  %17 = getelementptr inbounds %struct.checkout, %struct.checkout* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 8
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %24, label %20

20:                                               ; preds = %15
  %21 = load i32, i32* %5, align 4
  %22 = load %struct.stat*, %struct.stat** %7, align 8
  %23 = call i32 @fstat(i32 %21, %struct.stat* %22)
  store i32 1, i32* %4, align 4
  br label %25

24:                                               ; preds = %15, %10, %3
  store i32 0, i32* %4, align 4
  br label %25

25:                                               ; preds = %24, %20
  %26 = load i32, i32* %4, align 4
  ret i32 %26
}

declare dso_local i64 @fstat_is_reliable(...) #1

declare dso_local i32 @fstat(i32, %struct.stat*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
